Implement order-list parent talk to its child order-details

--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -12,6 +12,6 @@
 <body>
   <app-root></app-root>
   <!-- <app-hello></app-hello> -->
-  <orders-app></orders-app>
+  <!-- <orders-app></orders-app> -->
 </body>
 </html>
